2012-10-30 Erik Petrich <epetrich AT ivorytower.norman.ok.s>

	* sdas/asxxxsrc/asout.c (outdp): fix to match prototype

2012-10-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/as_hc08.vcxproj,
	* sdas/as6808/as_hc08.vcxproj.filters,
	* sdas/as8051/asx8051.vcxproj,
	* sdas/as8051/asx8051.vcxproj.filters,
	* sdas/asgb/asgb.vcxproj,
	* sdas/asgb/asgb.vcxproj.filters,
	* sdas/asrab/asrab.vcxproj,
	* sdas/asrab/asrab.vcxproj.filters,
	* sdas/asz80/as_z80.vcxproj,
	* sdas/asz80/as_z80.vcxproj.filters: added asmcro.c
	* sdas/as6808/m08mch.c,
	* sdas/as6808/m6808.h,
	* sdas/asxxsrc/asxxxx.h: outdp, chkindx synced with ASxxxx v5
	* device/lib/_gptrput.c: lock up on code write

2012-10-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/ports/ds390/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk:
	  Slightly increase timeouts.
	* support/regression/tests/gcc-torture-execute-20051104-1.c,
	  support/regression/tests/gcc-torture-execute-950426-1.c,
	  support/regression/tests/gcc-torture-execute-20021204-1.c:
	  Disable warning on assigning string literal to non-const pointer.

2012-10-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20070724-1.c:
	  Disabled test on gcc older than 5.0.

2012-10-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20050613-1.c:
	  Disable a test for mcs51, where it fails for stack-auto.

2012-10-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20060929-1.c,
	  support/regression/tests/gcc-torture-execute-20070201-1.c:
	  Disable tests on gcc older than 5.0.

2012-10-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-20060930-2.c:
	  Fixed bug #3577673.
	* support/regression/tests/gcc-torture-execute-20060127-1.c,